--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -5,10 +5,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:content_library"
     Shell.FlyoutBehavior="Disabled"
-    Title="content_library">
+    Title="Content Library">
 
     <ShellContent
-        Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
